--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -55,3 +55,8 @@ html {
 *, *::before, *::after { /* stylelint-disable-line */
   box-sizing: inherit;
 }
+
+a {
+  color: black;
+  text-decoration: none;
+}
