--- a/src/css/style.css
+++ b/src/css/style.css
@@ -141,14 +141,41 @@ body > header {
   }
 }
 
+.work-detail-container {
+  position: relative;
+
+  &::before {
+    display: block;
+    content: '';
+    background-image: url(../assets/img/background-work.svg);
+    width: 45.1rem;
+    height: 68.3rem;
+    position: absolute;
+    z-index: -30;
+    top: 50%;
+  }
+
+  &::after {
+    display: block;
+    content: '';
+    background-image: url(../assets/img/background-work2.svg);
+    height: 54.7rem;
+    width: 40rem;
+    position: absolute;
+    top: 10%;
+    z-index: -30;
+    right: 0;
+  }
+}
+
 .section-container {
-  padding: 4rem 0;
+  padding: 2rem 0;
 }
 
 .section-header {
   display: flex;
   align-items: center;
-  margin: 2rem 0;
+  margin: 0 0 2rem;
 }
 
 .line {
@@ -234,18 +261,6 @@ body > header {
   display: flex;
 }
 
-.about-container {
-  width: 80vw;
-  margin: auto;
-}
-
-.about-links {
-  margin-right: 10rem;
-  width: 50vw;
-  justify-content: space-between;
-  margin-top: 5rem;
-}
-
 .links-title, .shortinfo-title {
   margin: 1.5rem 0 .5rem;
   font-weight: 500;
@@ -309,6 +324,18 @@ body > header {
   padding-bottom: 20rem;
 }
 
+.about-container {
+  width: 80vw;
+  margin: auto;
+}
+
+.about-links {
+  margin-right: 10rem;
+  width: 50vw;
+  justify-content: space-between;
+  margin-top: 5rem;
+}
+
 .work-header {
   margin-left: 20%;
   align-items: center;
@@ -327,4 +354,32 @@ body > header {
 .work-category {
   color: #d0d0d0;
   line-height: 3rem;
+}
+
+.section-text {
+  width: 60vw;
+  margin-left: 10vw;
+  line-height: 2.4rem;
+}
+
+.flex-column {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.detail-design {
+  width: 85vw;
+  justify-content: space-between;
+  margin: 5rem auto;
+}
+
+.center-image {
+  display: block;
+  margin: 5rem auto;
+}
+
+.detail-img {
+  box-shadow: .3rem .1rem .8rem rgba(0, 0, 0, .25);
+  margin: 1rem 0;
 }
