--- a/src/css/style.css
+++ b/src/css/style.css
@@ -383,3 +383,14 @@ body > header {
   box-shadow: .3rem .1rem .8rem rgba(0, 0, 0, .25);
   margin: 1rem 0;
 }
+
+.footer {
+  width: 80vw;
+  display: flex;
+  margin: 0 auto 5rem;
+  justify-content: space-between;
+
+  &-link:hover {
+    text-decoration: underline;
+  }
+}
