--- a/src/css/style.css
+++ b/src/css/style.css
@@ -51,24 +51,26 @@ body > header {
   &::before {
     display: block;
     content: '';
-    background-image: url(../assets/img/background-header.svg);
+    background-image: url(../assets/svg/background-header.svg);
     width: 47.6rem;
     height: 59.5rem;
     position: absolute;
     z-index: -30;
     top: -10rem;
     right: 0;
+    background-repeat: no-repeat;
   }
 
   &::after {
     display: block;
     content: '';
-    background-image: url(../assets/img/background-header2.svg);
+    background-image: url(../assets/svg/background-header2.svg);
     width: 20.7rem;
     height: 38.2rem;
     position: absolute;
     top: 10rem;
     z-index: -30;
+    background-repeat: no-repeat;
   }
 }
 
@@ -120,24 +122,26 @@ body > header {
   &::before {
     display: block;
     content: '';
-    background-image: url(../assets/img/background-work.svg);
+    background-image: url(../assets/svg/background-work.svg);
     width: 45.1rem;
     height: 68.3rem;
     position: absolute;
     z-index: -30;
     top: 10%;
+    background-repeat: no-repeat;
   }
 
   &::after {
     display: block;
     content: '';
-    background-image: url(../assets/img/background-work2.svg);
+    background-image: url(../assets/svg/background-work2.svg);
     height: 54.7rem;
     width: 40rem;
     position: absolute;
     top: 50%;
     z-index: -30;
     right: 0;
+    background-repeat: no-repeat;
   }
 }
 
@@ -147,24 +151,26 @@ body > header {
   &::before {
     display: block;
     content: '';
-    background-image: url(../assets/img/background-work.svg);
+    background-image: url(../assets/svg/background-work.svg);
     width: 45.1rem;
     height: 68.3rem;
     position: absolute;
     z-index: -30;
     top: 50%;
+    background-repeat: no-repeat;
   }
 
   &::after {
     display: block;
     content: '';
-    background-image: url(../assets/img/background-work2.svg);
+    background-image: url(../assets/svg/background-work2.svg);
     height: 54.7rem;
     width: 40rem;
     position: absolute;
     top: 10%;
     z-index: -30;
     right: 0;
+    background-repeat: no-repeat;
   }
 }
 
@@ -253,7 +259,7 @@ body > header {
   cursor: pointer;
 }
 
-.work-img {
+.work-img, .work-header-img {
   box-shadow: .3rem .1rem .8rem rgba(0, 0, 0, .25);
 }
 
@@ -268,7 +274,7 @@ body > header {
 
 .shortinfo {
   color: white;
-  background-image: url(../assets/img/background-work-info.svg);
+  background-image: url(../assets/svg/background-work-info.svg);
   width: 39.5rem;
   height: 33rem;
   padding: 3rem 8rem;
@@ -337,7 +343,7 @@ body > header {
 }
 
 .work-header {
-  margin-left: 20%;
+  margin-left: 15vw;
   align-items: center;
 
   &-text {
@@ -392,5 +398,252 @@ body > header {
 
   &-link:hover {
     text-decoration: underline;
+  }
+}
+
+.meditea-design {
+  flex-wrap: wrap;
+}
+
+@media (width <= 1380px) {
+
+  .work-container {
+    flex-direction: column;
+    width: 70vw;
+    align-items: center;
+  }
+
+  .paranormalia-work {
+    width: 100%;
+    height: 50rem;
+    object-fit: cover;
+    object-position: top;
+
+    & .overlay {
+      width: 100%;
+    }
+  }
+
+  .detail-img {
+    width: 27vw;
+    height: 100%;
+  }
+
+  .flex-column .detail-img {
+    height: auto;
+    justify-content: flex-start;
+  }
+
+  .work-header-img {
+    width: 50vw;
+    height: 40rem;
+    object-fit: cover;
+    object-position: top;
+  }
+
+  .meditea-design {
+    justify-content: space-around;
+  }
+
+  .wide-section {
+    width: 100%;
+
+    flex-direction: row;
+    justify-content: space-between;
+
+    & .detail-img {
+      width: 40vw;
+      height: 100%;
+    }
+  }
+
+}
+
+@media (width <= 980px) {
+
+  .index-header::before {
+    width: 50vw;
+    height: 70vw;
+    background-size: contain;
+  }
+
+  .index-header::after {
+    width: 20vw;
+    height: calc(30vw * 1.8);
+    background-size: contain;
+  }
+
+  .main-container::before, .work-detail-container::after {
+    width: 50vw;
+    top: 5%;
+    height: calc(50vw * 1.51);
+    background-size: contain;
+  }
+
+  .main-container::after, .work-detail-container::before {
+    width: 40vw;
+    top: 40%;
+    background-size: contain;
+  }
+
+  .work-img {
+    width: 70vw;
+    height: 30rem;
+    object-fit: cover;
+    object-position: top;
+
+    & .overlay {
+      width: 100%;
+    }
+  }
+
+  .work-header-img {
+    width: 50vw;
+    height: 30rem;
+    object-fit: cover;
+    object-position: top;
+  }
+
+  .work-container .flex-next {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .detail-img {
+    width: 30rem;
+    height: 100%;
+    margin: 1rem;
+  }
+
+  .detail-design {
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+}
+
+@media (width <= 800px) {
+
+  .about-links {
+    flex-direction: column;
+    margin-top: 1rem;
+  }
+
+  .section-text {
+    width: 90vw;
+    margin: auto;
+  }
+
+  .shortinfo {
+    margin: 0;
+    background-image: none;
+    background-color: #ff6663;
+    display: flex;
+    width: 100vw;
+    justify-content: space-around;
+    align-items: center;
+    padding: 2rem;
+    height: auto;
+
+    &-link, &-text {
+      margin: 0;
+    }
+  }
+
+  .work-header {
+    flex-direction: column;
+    justify-content: center;
+    margin: 0;
+
+    &-img {
+      width: 75vw;
+    }
+  }
+
+  .work-title {
+    font-size: 2.4rem;
+  }
+
+  .work-category {
+    font-size: 1.6rem;
+  }
+
+  .center-image {
+    width: 95vw;
+  }
+
+  .wide-section {
+    flex-direction: column;
+
+    & .detail-img {
+      width: 90%;
+      height: auto;
+      margin: 1rem auto;
+
+    }
+
+    & .design-video {
+      display: block;
+      height: 25rem;
+    }
+  }
+
+  .work-header-text {
+    text-align: center;
+  }
+
+}
+
+@media (width <= 640px) {
+
+  .main-container {
+    margin-top: 10rem;
+  }
+
+  .about-container {
+    width: 90vw;
+  }
+
+  .about-text, .about-links {
+    width: 90vw;
+  }
+
+  .about-section {
+    padding-bottom: 3rem;
+  }
+
+  .shortinfo {
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    margin-bottom: 2rem;
+  }
+}
+
+@media (width <= 480px) {
+
+  .overlay-explain {
+    font-size: 1.6rem;
+  }
+
+  .overlay-link {
+    padding: 0;
+    bottom: 2rem;
+  }
+
+  .link-img {
+    width: 6vw;
+    height: 100%;
+  }
+
+  .intro-text {
+    font-size: 1.6rem;
+  }
+
+  .work-img {
+    height: 20rem;
+  }
+
+  .work-header-img {
+    width: 95vw;
   }
 }
