--- a/src/css/style.css
+++ b/src/css/style.css
@@ -8,20 +8,7 @@ html {
 body {
   font-family: 'Helvetica neue', Helvetica, Arial, sans-serif;
   font-size: 1.6rem;
-}
-
-body > header {
-  padding-top: 2rem;
-}
-
-.emoji {
-  font-size: 2.4rem;
-}
-
-.name {
-  font-family: grandhotel;
-  font-size: 2.8rem;
-  margin: 0 .5rem;
+  margin-top: 2rem;
 }
 
 .header-title {
@@ -33,19 +20,6 @@ body > header {
 .header-links {
   display: flex;
   justify-content: space-between;
-}
-
-.page-header {
-  background-color: #282c41;
-  color: white;
-}
-
-.white {
-  color: white;
-  fill: white;
-}
-
-.index-header {
   position: relative;
 
   &::before {
@@ -55,10 +29,10 @@ body > header {
     width: 47.6rem;
     height: 59.5rem;
     position: absolute;
+    position: right;
     z-index: -30;
     top: -10rem;
     right: 0;
-    background-repeat: no-repeat;
   }
 
   &::after {
@@ -70,7 +44,6 @@ body > header {
     position: absolute;
     top: 10rem;
     z-index: -30;
-    background-repeat: no-repeat;
   }
 }
 
@@ -117,71 +90,11 @@ body > header {
 
 .main-container {
   margin-top: 25rem;
-  position: relative;
-
-  &::before {
-    display: block;
-    content: '';
-    background-image: url(../assets/svg/background-work.svg);
-    width: 45.1rem;
-    height: 68.3rem;
-    position: absolute;
-    z-index: -30;
-    top: 10%;
-    background-repeat: no-repeat;
-  }
-
-  &::after {
-    display: block;
-    content: '';
-    background-image: url(../assets/svg/background-work2.svg);
-    height: 54.7rem;
-    width: 40rem;
-    position: absolute;
-    top: 50%;
-    z-index: -30;
-    right: 0;
-    background-repeat: no-repeat;
-  }
-}
-
-.work-detail-container {
-  position: relative;
-
-  &::before {
-    display: block;
-    content: '';
-    background-image: url(../assets/svg/background-work.svg);
-    width: 45.1rem;
-    height: 68.3rem;
-    position: absolute;
-    z-index: -30;
-    top: 50%;
-    background-repeat: no-repeat;
-  }
-
-  &::after {
-    display: block;
-    content: '';
-    background-image: url(../assets/svg/background-work2.svg);
-    height: 54.7rem;
-    width: 40rem;
-    position: absolute;
-    top: 10%;
-    z-index: -30;
-    right: 0;
-    background-repeat: no-repeat;
-  }
-}
-
-.section-container {
-  padding: 2rem 0;
 }
 
 .section-header {
   display: flex;
   align-items: center;
-  margin: 0 0 2rem;
 }
 
 .line {
@@ -204,446 +117,12 @@ body > header {
 
 .work-item {
   margin: 1rem 1.5rem;
-  position: relative;
 }
 
-.overlay {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  height: 100%;
-  width: 100%;
-  opacity: 0;
-  transition: .5s ease;
-  background-color: #282c41;
-  color: white;
-  padding: 2rem;
-
-  &-title {
-    font-weight: 500;
-    font-size: 2.1rem;
-    color: white;
-  }
-
-  &-client {
-    color: #d0d0d0;
-    margin-top: 1rem;
-  }
-
-  &-explain {
-    position: absolute;
-    top: 40%;
-    font-size: 1.8rem;
-    color: #d0d0d0;
-    line-height: 2.4rem;
-  }
-
-  &-link {
-    position: absolute;
-    bottom: 5rem;
-    font-weight: 500;
-    font-size: 1.8rem;
-    color: white;
-    padding: .5rem;
-
-    &:hover {
-      text-decoration: underline;
-    }
-  }
-}
-
-.work-item:hover .overlay {
-  opacity: 1;
-  cursor: pointer;
-}
-
-.work-img, .work-header-img {
+.work-img {
   box-shadow: .3rem .1rem .8rem rgba(0, 0, 0, .25);
 }
 
 .flex-next {
   display: flex;
-}
-
-.links-title, .shortinfo-title {
-  margin: 1.5rem 0 .5rem;
-  font-weight: 500;
-}
-
-.shortinfo {
-  color: white;
-  background-image: url(../assets/svg/background-work-info.svg);
-  width: 39.5rem;
-  height: 33rem;
-  padding: 3rem 8rem;
-  margin-top: -10rem;
-  font-size: 1.8rem;
-  margin-left: 5vw;
-
-  &-text {
-    margin: 1rem;
-  }
-
-  &-title {
-    font-size: 2.1rem;
-  }
-
-  &-link {
-    color: #282c41;
-    margin: 1rem;
-
-    &:hover {
-      transition: .5s ease;
-      text-decoration: underline;
-      cursor: pointer;
-    }
-  }
-}
-
-.links-url {
-  font-size: 1.4rem;
-  color: #ff6663;
-  margin-top: 2rem;
-
-  &:hover {
-    text-decoration: underline;
-  }
-}
-
-.mail-link {
-  text-decoration: underline;
-
-  &:hover {
-    color: #ff6663;
-  }
-}
-
-.about-text {
-  width: 60vw;
-  line-height: 2.4rem;
-  margin-top: 1.5rem;
-}
-
-.about-section {
-  padding-bottom: 20rem;
-}
-
-.about-container {
-  width: 80vw;
-  margin: auto;
-}
-
-.about-links {
-  margin-right: 10rem;
-  width: 50vw;
-  justify-content: space-between;
-  margin-top: 5rem;
-}
-
-.work-header {
-  margin-left: 15vw;
-  align-items: center;
-
-  &-text {
-    text-align: right;
-    margin-right: 5vw;
-  }
-}
-
-.work-title {
-  font-weight: 600;
-  font-size: 4.8rem;
-}
-
-.work-category {
-  color: #d0d0d0;
-  line-height: 3rem;
-}
-
-.section-text {
-  width: 60vw;
-  margin-left: 10vw;
-  line-height: 2.4rem;
-}
-
-.flex-column {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
-
-.detail-design {
-  width: 85vw;
-  justify-content: space-between;
-  margin: 5rem auto;
-}
-
-.center-image {
-  display: block;
-  margin: 5rem auto;
-}
-
-.detail-img {
-  box-shadow: .3rem .1rem .8rem rgba(0, 0, 0, .25);
-  margin: 1rem 0;
-}
-
-.footer {
-  width: 80vw;
-  display: flex;
-  margin: 0 auto 5rem;
-  justify-content: space-between;
-
-  &-link:hover {
-    text-decoration: underline;
-  }
-}
-
-.meditea-design {
-  flex-wrap: wrap;
-}
-
-@media (width <= 1380px) {
-
-  .work-container {
-    flex-direction: column;
-    width: 70vw;
-    align-items: center;
-  }
-
-  .paranormalia-work {
-    width: 100%;
-    height: 50rem;
-    object-fit: cover;
-    object-position: top;
-
-    & .overlay {
-      width: 100%;
-    }
-  }
-
-  .detail-img {
-    width: 27vw;
-    height: 100%;
-  }
-
-  .flex-column .detail-img {
-    height: auto;
-    justify-content: flex-start;
-  }
-
-  .work-header-img {
-    width: 50vw;
-    height: 40rem;
-    object-fit: cover;
-    object-position: top;
-  }
-
-  .meditea-design {
-    justify-content: space-around;
-  }
-
-  .wide-section {
-    width: 100%;
-
-    flex-direction: row;
-    justify-content: space-between;
-
-    & .detail-img {
-      width: 40vw;
-      height: 100%;
-    }
-  }
-
-}
-
-@media (width <= 980px) {
-
-  .index-header::before {
-    width: 50vw;
-    height: 70vw;
-    background-size: contain;
-  }
-
-  .index-header::after {
-    width: 20vw;
-    height: calc(30vw * 1.8);
-    background-size: contain;
-  }
-
-  .main-container::before, .work-detail-container::after {
-    width: 50vw;
-    top: 5%;
-    height: calc(50vw * 1.51);
-    background-size: contain;
-  }
-
-  .main-container::after, .work-detail-container::before {
-    width: 40vw;
-    top: 40%;
-    background-size: contain;
-  }
-
-  .work-img {
-    width: 70vw;
-    height: 30rem;
-    object-fit: cover;
-    object-position: top;
-
-    & .overlay {
-      width: 100%;
-    }
-  }
-
-  .work-header-img {
-    width: 50vw;
-    height: 30rem;
-    object-fit: cover;
-    object-position: top;
-  }
-
-  .work-container .flex-next {
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .detail-img {
-    width: 30rem;
-    height: 100%;
-    margin: 1rem;
-  }
-
-  .detail-design {
-    flex-wrap: wrap;
-    justify-content: center;
-  }
-}
-
-@media (width <= 800px) {
-
-  .about-links {
-    flex-direction: column;
-    margin-top: 1rem;
-  }
-
-  .section-text {
-    width: 90vw;
-    margin: auto;
-  }
-
-  .shortinfo {
-    margin: 0;
-    background-image: none;
-    background-color: #ff6663;
-    display: flex;
-    width: 100vw;
-    justify-content: space-around;
-    align-items: center;
-    padding: 2rem;
-    height: auto;
-
-    &-link, &-text {
-      margin: 0;
-    }
-  }
-
-  .work-header {
-    flex-direction: column;
-    justify-content: center;
-    margin: 0;
-
-    &-img {
-      width: 75vw;
-    }
-  }
-
-  .work-title {
-    font-size: 2.4rem;
-  }
-
-  .work-category {
-    font-size: 1.6rem;
-  }
-
-  .center-image {
-    width: 95vw;
-  }
-
-  .wide-section {
-    flex-direction: column;
-
-    & .detail-img {
-      width: 90%;
-      height: auto;
-      margin: 1rem auto;
-
-    }
-
-    & .design-video {
-      display: block;
-      height: 25rem;
-    }
-  }
-
-  .work-header-text {
-    text-align: center;
-  }
-
-}
-
-@media (width <= 640px) {
-
-  .main-container {
-    margin-top: 10rem;
-  }
-
-  .about-container {
-    width: 90vw;
-  }
-
-  .about-text, .about-links {
-    width: 90vw;
-  }
-
-  .about-section {
-    padding-bottom: 3rem;
-  }
-
-  .shortinfo {
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
-    margin-bottom: 2rem;
-  }
-}
-
-@media (width <= 480px) {
-
-  .overlay-explain {
-    font-size: 1.6rem;
-  }
-
-  .overlay-link {
-    padding: 0;
-    bottom: 2rem;
-  }
-
-  .link-img {
-    width: 6vw;
-    height: 100%;
-  }
-
-  .intro-text {
-    font-size: 1.6rem;
-  }
-
-  .work-img {
-    height: 20rem;
-  }
-
-  .work-header-img {
-    width: 95vw;
-  }
 }
