--- a/src/css/vars.css
+++ b/src/css/vars.css
@@ -1,3 +1,42 @@
 :root {
   --bg-color: #fafafa;
+  --light-grey: #d0d0d0;
+  --dark-blue: #282c41;
+  --pinkred: #ff6663;
+
+  --flex-spaceBetween: {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  --background-elements: {
+    display: block;
+    content: '';
+    position: absolute;
+    z-index: -30;
+    background-repeat: no-repeat;
+  }
+
+  --column-center: {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  --flex-center: {
+    display: flex;
+    align-items: center;
+  }
+
+  --column-justify-center: {
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  --hover: {
+
+    &:hover {
+      text-decoration: underline;
+      cursor: pointer;
+    }
+  }
 }
