--- a/src/css/vars.css
+++ b/src/css/vars.css
@@ -1,42 +1,43 @@
 :root {
-  --bg-color: #fafafa;
+  --bg-color: #fefbf8;
+  --line-color: #fbf1e7;
   --light-grey: #d0d0d0;
-  --dark-blue: #282c41;
-  --pinkred: #ff6663;
-
-  --flex-spaceBetween: {
-    display: flex;
-    justify-content: space-between;
-  }
-
-  --background-elements: {
-    display: block;
-    content: '';
-    position: absolute;
-    z-index: -30;
-    background-repeat: no-repeat;
-  }
-
-  --column-center: {
-    flex-direction: column;
-    align-items: center;
-  }
-
-  --flex-center: {
-    display: flex;
-    align-items: center;
-  }
-
-  --column-justify-center: {
-    flex-direction: column;
-    justify-content: center;
-  }
+  --font-blue: #4e4cb6;
+  --linkred: #ff9796;
 
   --hover: {
+    transition: .15s ease-in;
 
     &:hover {
-      text-decoration: underline;
       cursor: pointer;
+      color: var(--linkred);
+    }
+  }
+
+  --hover--line: {
+
+    &:hover {
+      cursor: pointer;
+      color: var(--linkred);
+
+      &::after {
+        transform: scaleX(1);
+        transform-origin: center right;
+      }
+    }
+
+    &::after {
+      content: '';
+      position: absolute;
+      display: block;
+      left: 0;
+      width: 100%;
+      height: 2px;
+      top: 50%;
+      background: var(--linkred);
+      transform-origin: center left;
+      transform: scaleX(0);
+      transition: transform .5s cubic-bezier(.55, 0, .1, 1);
     }
   }
 }
